added Login/Signup feature

--- a/client/src/styles/blogs.css
+++ b/client/src/styles/blogs.css
@@ -16,3 +16,13 @@
     border: none;
     text-decoration: none;
 }
+
+.auth-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-info {
+    margin-right: 5rem;
+}
